--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^2.0.2",
+    "@prisma/client": "^6.19.2",
+    "@react-google-maps/api": "^2.20.8",
+    "@supabase/supabase-js": "^2.98.0",
+    "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
+    "googleapis": "^171.4.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^8.0.1",
+    "openai": "^6.25.0",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
