--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.98.0",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "git": "^0.1.5",
     "googleapis": "^171.4.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
